k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testmails
  namespace: wcr
spec:
  selector: { app.kubernetes.io/name: testmails }
  ports:
    - { name: http, port: 3000, targetPort: http }
